[gd_scene load_steps=4 format=3 uid="uid://1hja6jk0k310"]

[ext_resource type="Script" path="res://scripts/menus/pause_menu.gd" id="1_e70hy"]

[sub_resource type="Shader" id="Shader_y0jqs"]
code = "shader_type canvas_item;

uniform float blur_amount : hint_range(0, 5);
uniform sampler2D SCREEN_TEXTURE : hint_screen_texture, filter_linear_mipmap;

void fragment() {
	COLOR = textureLod(SCREEN_TEXTURE, SCREEN_UV, blur_amount);
}"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_bxx1r"]
shader = SubResource("Shader_y0jqs")
shader_parameter/blur_amount = 2.0

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
layer = 5
visible = false
script = ExtResource("1_e70hy")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_bxx1r")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -336.5
offset_top = -173.0
offset_right = 336.5
offset_bottom = 173.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
process_mode = 3
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -262.0
offset_top = -101.5
offset_right = 262.0
offset_bottom = 101.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30

[node name="Continue" type="Button" parent="Panel/VBoxContainer"]
process_mode = 3
layout_mode = 2
focus_mode = 0
theme_override_font_sizes/font_size = 46
text = "Weiter spielen"

[node name="RestartLevel" type="Button" parent="Panel/VBoxContainer"]
process_mode = 3
layout_mode = 2
focus_mode = 0
theme_override_font_sizes/font_size = 46
text = "Level neu starten"

[node name="CloseLevel" type="Button" parent="Panel/VBoxContainer"]
process_mode = 3
layout_mode = 2
focus_mode = 0
theme_override_font_sizes/font_size = 46
text = "Beenden"

[connection signal="pressed" from="Panel/VBoxContainer/Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/RestartLevel" to="." method="_on_restart_level_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/CloseLevel" to="." method="_on_close_level_pressed"]
